--- a/dre.html
+++ b/dre.html
@@ -51,9 +51,15 @@
         <a href="https://www.jeffsu.org/" target="_blank">Jeff Su</a>
         <a href="https://libbyapp.com/shelf" target="_blank">Libby</a>           
         <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html" target="_blank">GitHub</a>
-        <a href="#link8">Link 8</a>
-        <a href="#link9">Link 9</a>
-        <a href="#link10">Link 10</a>
+        <a href="https://gptstore.ai/">GPT Store</a>
+        <a href="https://google.com">Google</a>
+        <a href="https://www.office.com/">Office 365</a>
+          <a href="https://www.netflix.com/login">Netflix</a>
+          <a href="https://www.ebay.com/">Ebay</a>
+          <a href="https://www.amazon.com/">Amazon</a>
+        <a href="https://www.wikipedia.org/">Wikipedia</a>
+        <a href="https://www.reddit.com/">Reddit</a>
+        
   
     </div>
    <!-- Main Content Section -->
