--- a/dre.html
+++ b/dre.html
@@ -49,6 +49,7 @@
           <a href="https://www.youtube.com/" target="_blank">YouTube</a>
         <a href="https://www.w3schools.com/" target="_blank">W3School</a>
         <a href="https://www.jeffsu.org/" target="_blank">Jeff Su</a>
+           <a href="https://www.color-hex.com/" target="_blank">Colors</a>
         <a href="https://libbyapp.com/shelf" target="_blank">Libby</a>           
         <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html" target="_blank">GitHub</a>
         <a href="https://gptstore.ai/"target="_blank">GPT Store</a>
