--- a/dre.html
+++ b/dre.html
@@ -19,7 +19,7 @@
     <header>
           <div class="header-top">
             <div id="logo">
-                <img src="Thumbnails/wallaceBrown.png" alt="Your Logo">
+                <img src="Thumbnails/Wlogo.png" alt="Your Logo">
             </div>
             <div id="top-banner">
                 <img src="Thumbnails/banner.jpg" alt="Banner">
