--- a/resources.html
+++ b/resources.html
@@ -31,7 +31,7 @@
 
 
 
-
+<iframe width="540" height="390" src="https://www.youtube.com/embed/G3e-cpL7ofc" title="HTML &amp; CSS Full Course - Beginner to Pro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 
