--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="stylesheet" type="text/css" href="side-menu.css">
+  <link rel="stylesheet" href="Styles/sidebar.css">
     <link rel="stylesheet" type="text/css" href="header.css">
 </head>
 <body>
