--- a/dre.html
+++ b/dre.html
@@ -61,6 +61,7 @@
         <a href="https://www.wikipedia.org/"target="_blank">Wikipedia</a>
         <a href="https://www.reddit.com/"target="_blank">Reddit</a>
             <a href="https://open.spotify.com/?"target="_blank">Spotify</a>
+          <a href=" https://supersimpledev.github.io/references/html-css-reference.pdf"target="_blank">CSS/HTML reference</a>
         
   
     </div>
