--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="Styles/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="header.css">
+    <link rel="stylesheet" type="text/css" href="css_header.css">
 </head>
 <body>
     <nav id="top-nav">
