--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="Styles/sidebar.css">
     <link rel="stylesheet" type="text/css" href="css_header.css">
 </head>
-<body>
+<body style="left-margin":100px>
     <nav id="top-nav">
         <!-- Navigation links here -->
     </nav>
