--- a/dre.html
+++ b/dre.html
@@ -28,10 +28,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                    <li><a href="food.html">Food</a></li>
-                    <li><a href="ai_prompts.html">AI Prompts</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="resources.html">Andre's test page</a></li>
+                    <li><a href="food.html">Wallace Consortium</a></li>
+                    <li><a href="ai_prompts.html">AIs</a></li>
+                    <li><a href="#blog">Learning</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                 </ul>
             </nav>
