--- a/dre.html
+++ b/dre.html
@@ -22,7 +22,7 @@
                 <img src="Thumbnails/Wlogo.png" alt="Your Logo">
             </div>
             <div id="top-banner">
-                <img src="Thumbnails/banner.jpg" alt="Banner">
+                <img src="Thumbnails/Andre2logo.png" alt="Banner">
             </div>
         </div>
             <nav>
