--- a/Dukespage.html
+++ b/Dukespage.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-   <img style="opacity: 0.5 ;" src="Thumbnails/tea.png" alt="Blog Post Image" style="width:100px; height:auto;">
+   <img style="opacity: 0.5 ;" src="Thumbnails/tea1.png" alt="Blog Post Image" style="width:100px; height:auto;">
     <h1>My Page</h1>
 
     <h2>Info</h2>
