--- a/dre.html
+++ b/dre.html
@@ -85,9 +85,9 @@
         <!-- Embedded Iframe for GPT Development Videos -->
        <div>
        
-       <iframe width="540" height="360" src="https://www.youtube.com/embed/057OY3ZyFtc" title="OpenAI&#39;s ChatGPT Now Learns 1000x Faster!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     <iframe width="540" height="360" src="https://www.youtube.com/embed/P9iWPk7IW-M" title="I Gave an Ai Bot $30,000 to Trade Stocks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>     
     <iframe width="540" height="360" src="https://www.youtube.com/embed/AB3Y-4a3ZrU" title="30-Minute Yoga For Beginners | Start Yoga Here..." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>     
-<iframe width="540" height="360" src="https://www.youtube.com/embed/gJwSKOpIY4A" title="SAM IS BACK! BOARD IS FIRED! We now know what ACTUALLY happened at OpenAI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>         
+<iframe width="540" height="360" src="https://www.youtube.com/embed/tW13N4Hll88" title="The ONLY Candlestick Pattern Guide You&#39;ll EVER NEED" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
     
        </div>
         <p>🌟 Stay tuned as we continue to explore these groundbreaking technologies and their impact on our world. </p>
