--- a/dre.html
+++ b/dre.html
@@ -88,7 +88,8 @@
      <iframe width="540" height="360" src="https://www.youtube.com/embed/P9iWPk7IW-M" title="I Gave an Ai Bot $30,000 to Trade Stocks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>     
     <iframe width="540" height="360" src="https://www.youtube.com/embed/AB3Y-4a3ZrU" title="30-Minute Yoga For Beginners | Start Yoga Here..." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>     
 <iframe width="540" height="360" src="https://www.youtube.com/embed/tW13N4Hll88" title="The ONLY Candlestick Pattern Guide You&#39;ll EVER NEED" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
-    
+    <iframe width="540" height="360" src="https://www.youtube.com/embed/x5Yq8RvCpgw" title="TI Market Dashboards: Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           
        </div>
         <p>🌟 Stay tuned as we continue to explore these groundbreaking technologies and their impact on our world. </p>
           <p>🌟 Now watch some fun hand picked videos above </p>
