--- a/test.html
+++ b/test.html
@@ -54,8 +54,8 @@
         
         <p><b><a href="https://finance.yahoo.com/topic/stock-market-news" target="_blank">Yahoo Finance</a></b> - Latest Stock Market News: Provides the latest news affecting the stock market, including company-specific news and broader market trends.</p>
 
-<iframe width="873" height="491" src="https://www.youtube.com/embed/p_xkBMnQVI0" title="Zapier AI Actions &amp; GPTs | Tutorial, Examples and Automation Ideas 🔥" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        
+<iframe width="500" height="491" src="https://www.youtube.com/embed/p_xkBMnQVI0" title="Zapier AI Actions &amp; GPTs | Tutorial, Examples and Automation Ideas 🔥" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="500" height="491" src="https://www.youtube.com/embed/_uQrJ0TkZlc" title="Python Tutorial - Python Full Course for Beginners" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
 
 
     </main>
