--- a/dre.html
+++ b/dre.html
@@ -53,7 +53,7 @@
         <a href="https://libbyapp.com/shelf" target="_blank">Libby</a>           
         <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html" target="_blank">GitHub</a>
         <a href="https://gptstore.ai/"target="_blank">GPT Store</a>
-        <a href="https://google.com">Google</a>
+        <a href="https://google.com" target="_blank">Google</a>
         <a href="https://www.office.com/"target="_blank">Office 365</a>
           <a href="https://www.netflix.com/login"target="_blank">Netflix</a>
           <a href="https://www.ebay.com/"target="_blank">Ebay</a>
