--- a/dre.html
+++ b/dre.html
@@ -31,8 +31,8 @@
                     <li><a href="test.html">Andre's test page</a></li>
                     <li><a href="Wallace.html">Wallace Consortium</a></li>
                     <li><a href="ai.html">AIs</a></li>
-                    <li><a href="#blog">Learning</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="duke.html">Duke</a></li>
+                    <li><a href="skye.html">Skye</a></li>
                 </ul>
             </nav>
         </div>
