--- a/dre.html
+++ b/dre.html
@@ -21,7 +21,7 @@
                 <img src="Thumbnails/Wlogo3.png" alt="Your Logo">
             </div>
             <div id="top-banner">
-                <img src="Thumbnails/tanbanner.jpg" alt="Banner">
+                <img src="Thumbnails/blueMetal.jpg" alt="Banner">
             </div>
         </div>
             <nav>
