--- a/dre.html
+++ b/dre.html
@@ -26,7 +26,7 @@
         </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="dre.html">Home</a></li>
                     <li><a href="test.html">Andre's test page</a></li>
                     <li><a href="Wallace.html">Wallace Consortium</a></li>
                     <li><a href="ai.html">AIs</a></li>
