--- a/dre.html
+++ b/dre.html
@@ -74,16 +74,16 @@
 
         <h2>🌌 New Year New Mindset 🤖</h2>
         <p>👋 2024 is going to be a great year. I couldn't find an emoji for black clapping hands so I used the little yellow ones....whatever. Anyway let's get on to it
-        <br>. This space will be like a blogspot with quick reference to all my favorite things</p>
+        <br> This space will be like a blogspot with quick reference to all my favorite things</p>
         
         <h3>🔍 What's New in my World? </h3>
 <p> Starting to invest. Found a WhatsApp group that has been giving me foreign stock trades in HongKong. The research is sound. Group has been shut down a few times and seems shady but I'm not investing in anything but real stocks and
 <br>
-I'm not letting them control any of my funds.  So far I've made a profit of about 15% a week off their picks. They said that I can trade the first 3 months for free and then they will charge me anywhere from 1% to 5% of my profit. 
-<br>
-sounds like a good idea to me. I'm in month 2. Fingers crossed.....I want to see if I can pay off my credit cards, student loans and buy a rental property in 2024 off this....I know....Ambitious. but all Gas no Brakes from here on out 🚀  </p>
-        <h3>Next UP! </h3>
-        <p>Get the workout routine together, improve nutrition, sleep, and look for more money making opportunities <p/>
+
+
+            <h3> Shout out to Jermaine!  WHAT UP!! Time to make a reality shift. If you create it it will be.
+            <br>
+            Simple, but the complexity is in the simplicity which makes it an infinite loop. Reset the code. Upgrade the software.</h3>
         <!-- Embedded Iframe for GPT Development Videos -->
        <div>
          <h3>Hot videos!!!! </h3>
@@ -91,6 +91,8 @@ sounds like a good idea to me. I'm in month 2. Fingers crossed.....I want to see
 <iframe width="540" height="360" src="https://www.youtube.com/embed/Kvoq4luIYVc" title="5 Minute Full Body Stretch | Total Body Yoga" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
            <iframe width="540" height="360" src="https://www.youtube.com/embed/tW13N4Hll88" title="The ONLY Candlestick Pattern Guide You&#39;ll EVER NEED" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
 <iframe width="540" height="360" src="https://www.youtube.com/embed/MM9x1iUG3hQ" title="Teslas OPTIMUS GEN-2 Just SHOCKED The ENTIRE INDUSTRY! Full Breakdown + Technical Report" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>           
+       <iframe width="540" height="360" src="https://www.youtube.com/embed/IkztgptX4wE" title="I Used Smart AR Glasses with a Laptop for 1 Month" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           
        </div>
         <p>🌟 Stay tuned as we continue to explore these groundbreaking technologies and their impact on our world. </p>
           <p>🌟 Now watch some fun hand picked videos above </p>
