--- a/dre.html
+++ b/dre.html
@@ -77,12 +77,38 @@
         <br> This space will be like a blogspot with quick reference to all my favorite things</p>
         
         <h3>🔍 What's New in my World? </h3>
-<p> Starting to invest. Found a WhatsApp group that has been giving me foreign stock trades in HongKong. The research is sound. Group has been shut down a few times and seems shady but I'm not investing in anything but real stocks and
-<br>
+<h3 id="how-to-perform-the-blessing-of-the-energy-centers-meditation">How to Perform the Blessing of the Energy Centers Meditation</h3>
+<p>The Blessing of the Energy Centers meditation by Dr. Joe Dispenza is designed to harmonize and balance the body&#39;s energy centers or chakras. Here&#39;s a detailed guide on how to perform this meditation:</p>
+<ol>
+<li><p><strong>Find a Quiet Space</strong>: Choose a quiet, comfortable place where you won&#39;t be disturbed. Sit down in a comfortable position, either on a chair with your feet flat on the ground and hands resting on your lap, or on the floor in a cross-legged position.</p>
+</li>
+<li><p><strong>Begin with Deep Breaths</strong>: Close your eyes and take some deep, slow breaths. Inhale through your nose and exhale through your mouth. This helps to relax your body and mind, preparing you for meditation.</p>
+</li>
+<li><p><strong>Focus on the First Energy Center</strong>: Bring your attention to the first energy center located at the base of your spine (the root chakra). Visualize a sphere of energy in this location. This energy center is associated with the color red. Focus on feeling grounded and secure.</p>
+</li>
+<li><p><strong>Bless the First Energy Center</strong>: With your attention on the first energy center, mentally or verbally express intentions or blessings for this center. You might focus on health, stability, or safety, envisioning this energy center glowing brightly with health and balance.</p>
+</li>
+<li><p><strong>Move Up to the Second Center</strong>: Shift your focus to the second energy center, located just below the navel (the sacral chakra). This center is associated with the color orange. Here, you might focus on creativity, emotional balance, and sexuality. Bless this center with intentions for harmony and wellbeing.</p>
+</li>
+<li><p><strong>Continue to Each Subsequent Center</strong>:</p>
+<ul>
+<li><strong>Third Center</strong>: Solar Plexus (yellow) - Focus on personal power, self-esteem, and confidence.</li>
+<li><strong>Fourth Center</strong>: Heart (green) - Concentrate on love, compassion, and healing.</li>
+<li><strong>Fifth Center</strong>: Throat (blue) - Focus on communication, truth, and self-expression.</li>
+<li><strong>Sixth Center</strong>: Third Eye (indigo) - Concentrate on intuition, insight, and wisdom.</li>
+<li><strong>Seventh Center</strong>: Crown (violet) - Focus on spirituality, consciousness, and connection to the divine.</li>
+</ul>
+</li>
+<li><p><strong>Visualize Energy Flowing</strong>: As you bless each energy center, visualize a flow of energy moving up from the base of your spine to the crown of your head, connecting and harmonizing all the centers. Imagine this energy as a stream of light, cleansing and balancing each center.</p>
+</li>
+<li><p><strong>Conclude with Gratitude</strong>: After you&#39;ve moved through all the energy centers, spend a few moments in gratitude. Thank the universe or your higher power for this meditative experience and for the balance and harmony brought to your energy centers.</p>
+</li>
+<li><p><strong>Gently Return</strong>: When you&#39;re ready, bring your awareness back to your body. Wiggle your fingers and toes, and when you feel ready, open your eyes.</p>
+</li>
+</ol>
+<p>This meditation can be performed daily or as often as you feel necessary to maintain balance and harmony within your energy centers. It&#39;s a powerful practice for promoting overall wellbeing, reducing stress, and enhancing your connection to your inner self and the universe.</p>
+<p>The image provided visualizes the serene and meditative environment ideal for such a practice, with the alignment of the energy centers or chakras visualized along the spine.</p>
 
-
-            <h3> Shout out to Jermaine!  WHAT UP!! Time to make a reality shift. If you create it it will be.
-            <br>
             Simple, but the complexity is in the simplicity which makes it an infinite loop. Reset the code. Upgrade the software.</h3>
         <!-- Embedded Iframe for GPT Development Videos -->
        <div>
