--- a/dre.html
+++ b/dre.html
@@ -59,6 +59,7 @@
           <a href="https://www.amazon.com/"target="_blank">Amazon</a>
         <a href="https://www.wikipedia.org/"target="_blank">Wikipedia</a>
         <a href="https://www.reddit.com/"target="_blank">Reddit</a>
+       <a href="https://markdowntohtml.com/target=blank">Markdown to HTML</a>
             <a href="https://open.spotify.com/?"target="_blank">Spotify</a>
           <a href=" https://supersimpledev.github.io/references/html-css-reference.pdf"target="_blank">CSS/HTML reference</a>
         
@@ -76,7 +77,7 @@
         <p>👋 2024 is going to be a great year. I couldn't find an emoji for black clapping hands so I used the little yellow ones....whatever. Anyway let's get on to it
         <br> This space will be like a blogspot with quick reference to all my favorite things</p>
         
-        <h3>🔍 What's New in my World? </h3>
+        <h3>🔍 What's New in my World? MEDITATION </h3>
 <h3 id="how-to-perform-the-blessing-of-the-energy-centers-meditation">How to Perform the Blessing of the Energy Centers Meditation</h3>
 <p>The Blessing of the Energy Centers meditation by Dr. Joe Dispenza is designed to harmonize and balance the body&#39;s energy centers or chakras. Here&#39;s a detailed guide on how to perform this meditation:</p>
 <ol>
@@ -108,7 +109,9 @@
 </ol>
 <p>This meditation can be performed daily or as often as you feel necessary to maintain balance and harmony within your energy centers. It&#39;s a powerful practice for promoting overall wellbeing, reducing stress, and enhancing your connection to your inner self and the universe.</p>
 <p>The image provided visualizes the serene and meditative environment ideal for such a practice, with the alignment of the energy centers or chakras visualized along the spine.</p>
-
+<div>   
+    <img src="thumbnails/meditation_chakras" alt="Blog Post Image" style="width:100; height:auto;">
+</div>
             Simple, but the complexity is in the simplicity which makes it an infinite loop. Reset the code. Upgrade the software.</h3>
         <!-- Embedded Iframe for GPT Development Videos -->
        <div>
