--- a/dre.html
+++ b/dre.html
@@ -110,7 +110,7 @@
 <p>This meditation can be performed daily or as often as you feel necessary to maintain balance and harmony within your energy centers. It&#39;s a powerful practice for promoting overall wellbeing, reducing stress, and enhancing your connection to your inner self and the universe.</p>
 <p>The image provided visualizes the serene and meditative environment ideal for such a practice, with the alignment of the energy centers or chakras visualized along the spine.</p>
 <div>   
-    <img src="Thumbnails/meditation_chakras.png" alt="Blog Post Image" style="width:100; height:auto;">
+    <img src="Thumbnails/meditation_chakras.png" alt="Blog Post Image" style="width:150px; height:120px;">
 </div>
             Simple, but the complexity is in the simplicity which makes it an infinite loop. Reset the code. Upgrade the software.</h3>
         <!-- Embedded Iframe for GPT Development Videos -->
