--- a/test.html
+++ b/test.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Link to your CSS files -->
+    <link rel="stylesheet" href="Styles/css_header.css">
+ 
+    <link rel="stylesheet" href="Styles/sidebar.css">
 
-  <link rel="stylesheet" href="Styles/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="css_header.css">
-</head>
+
 <body style=margin-left:100px ; padding-left:100px>
     <nav id="top-nav">
         <!-- Navigation links here -->
     </nav>
 
     <header id="header-image">
-        <img src="Thumbnails/officstyle.jpg" alt="Header Image">
+        <img src="Thumbnails/tanbanner.jpg" alt="Header Image">
     </header>
  <div class="sidebar">
         <!-- Sidebar Links -->
