--- a/test.html
+++ b/test.html
@@ -11,10 +11,11 @@
     <nav id="top-nav">
         <!-- Navigation links here -->
     </nav>
-
+<div style="padding-left: 50px;">
     <header id="header-image">
         <img src="Thumbnails/tanbanner.jpg" alt="Header Image">
     </header>
+    <div/>
  <div class="sidebar">
         <!-- Sidebar Links -->
       
