--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     </nav>
 <div style="padding-left: 50px;">
     <header id="header-image">
-        <img src="Thumbnails/tanbanner.jpg" alt="Header Image">
+        <img src="Thumbnails/tanbanner.jpg" alt="Header Image style="width: 100%; display: block; margin: 0;">">
     </header>
     <div/>
  <div class="sidebar">
