--- a/test.html
+++ b/test.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="Styles/sidebar.css">
 
 
-<body style=margin-left:100px ; padding-left:100px>
+
     <nav id="top-nav">
         <!-- Navigation links here -->
     </nav>
 <div style="padding-left: 150px;">
     <header id="header-image">
-        <img src="Thumbnails/tanbanner.jpg" alt="Header Image style="width: 100%; display: block; margin: 0;">">
+        <img src="Thumbnails/tanbanner.jpg" alt="Header Image style="width: 100%; display: block; margin: 0;">
     </header>
     <div/>
+        <body style=margin-left50px ; padding-left:50px>
  <div class="sidebar">
         <!-- Sidebar Links -->
       
@@ -57,7 +58,6 @@
         
         <p><b><a href="https://finance.yahoo.com/topic/stock-market-news" target="_blank">Yahoo Finance</a></b> - Latest Stock Market News: Provides the latest news affecting the stock market, including company-specific news and broader market trends.</p>
 
-<iframe width="500" height="491" src="https://www.youtube.com/embed/p_xkBMnQVI0" title="Zapier AI Actions &amp; GPTs | Tutorial, Examples and Automation Ideas 🔥" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="500" height="491" src="https://www.youtube.com/embed/_uQrJ0TkZlc" title="Python Tutorial - Python Full Course for Beginners" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
 
 
