--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 
         #header-image img {
             width: 100%; /* Ensures the image takes full width */
-            height: auto; /* Maintains aspect ratio */
+            height: 200px; /* Maintains aspect ratio */
             display: block;
         }
 
