--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <style>
         /* Resetting default margins and paddings */
         body, html {
-            margin: 0;
+            margin-left: 50px;
             padding: 0;
             overflow-x: hidden; /* Prevents horizontal scroll */
         }
