--- a/dre.html
+++ b/dre.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="dre.html">Home</a></li>
                     <li><a href="test.html">Andre's test page</a></li>
-                    <li><a href="Wallace.html">Wallace Consortium</a></li>
+                    <li><a href="mytube.html">Wallace Consortium</a></li>
                     <li><a href="ai.html">AIs</a></li>
                     <li><a href="duke.html">Duke</a></li>
                     <li><a href="skye.html">Skye</a></li>
