--- a/dre.html
+++ b/dre.html
@@ -76,7 +76,7 @@
         <h2>🌌 February 2024 moving into March 2024 🤖</h2>
         <p>👋 Items to learn this month:
     
-        <br> T</p>
+        <br> Python , SQL , HTML/CSS review , Meditation , Physical Activity</p>
         
         <h3>🔍 What's New in my World? time to get in shape </h3>
 <h3 id="how-to-perform-the-blessing-of-the-energy-centers-meditation">How to Perform the Blessing of the Energy Centers Meditation</h3>
