--- a/dre.html
+++ b/dre.html
@@ -50,7 +50,7 @@
         <a href="https://www.jeffsu.org/" target="_blank">Jeff Su</a>
            <a href="https://www.color-hex.com/" target="_blank">Colors</a>
         <a href="https://libbyapp.com/shelf" target="_blank">Libby</a>           
-        <a href="https://github.com/writeItInCursive/Andre-website/edit/main/dre.html" target="_blank">GitHub</a>
+        <a href="https://github.com/writeItInCursive/Andre-website/blob/main/dre.html" target="_blank">GitHub</a>
         <a href="https://gptstore.ai/"target="_blank">GPT Store</a>
         <a href="https://google.com" target="_blank">Google</a>
         <a href="https://www.office.com/"target="_blank">Office 365</a>
@@ -59,7 +59,7 @@
           <a href="https://www.amazon.com/"target="_blank">Amazon</a>
         <a href="https://www.wikipedia.org/"target="_blank">Wikipedia</a>
         <a href="https://www.reddit.com/"target="_blank">Reddit</a>
-       <a href="https://markdowntohtml.com/target=blank">Markdown to HTML</a>
+       <a href="https://markdowntohtml.com/"target="_blank">Markdown to HTML</a>
             <a href="https://open.spotify.com/?"target="_blank">Spotify</a>
           <a href=" https://supersimpledev.github.io/references/html-css-reference.pdf"target="_blank">CSS/HTML reference</a>
         
