--- a/dre.html
+++ b/dre.html
@@ -120,6 +120,8 @@
 <p>This introduction is designed to get you started with Python programming. As you become more comfortable with these basics, you&#39;ll be ready to explore more complex concepts and build your own Python programs. Happy coding!</p>
 
 <br>
+        <iframe width="982" height="480" src="https://www.youtube.com/embed/NpmFbWO6HPU" title="9 HOURS of Python Projects - From Beginner to Advanced" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        
 <br>
 <h3 id="how-to-perform-the-blessing-of-the-energy-centers-meditation">How to Perform the Blessing of the Energy Centers Meditation</h3>
 <p>The Blessing of the Energy Centers meditation by Dr. Joe Dispenza is designed to harmonize and balance the body&#39;s energy centers or chakras. Here&#39;s a detailed guide on how to perform this meditation:</p>
